[Refactored] Test cases have been refactored as changed in services